Patch from Evan Huang (IBM) Remove float rule which was causing grid columns to resize in the wrong direction.  Also accounts for scrollbar on FF so that columns align with content.  !strict   Thanks, Evan!  Fixes #5978, Refs #9169
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@19101 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/grid/resources/Grid_rtl.css
+++ b/grid/resources/Grid_rtl.css
@@ -1,12 +1,5 @@
-.dijitRtl .dojoxGridHeader table {
-}
-
 .dj_ie .dijitRtl .dojoxGridHeader table {
 	float:none;
-}
-
-.dijitRtl .dojoxGridContent {
-	float:left;
 }
 
 .dijitRtl .dojoxGridCell {
